# implicitModeler

./: .gitignore  AGENT_REFERENCE.md  Cargo.toml  Claude.md  GPU_COMPUTE_TRANSITION_PLAN.md  Launch Implicit CAD.bat  MasterPlan.md  PHASE7_COMPLETE.md  PHASE8_COMPLETE.md  PROGRESS.md  ProjectOverview.md  README.md  Videos - Shortcut.lnk  bwb_edf_800.rhai  conformal_profile_duct_x_debug.rhai  conformal_profile_x_debug.rhai  dual_conformal_profile_duct_x155.csv  dual_conformal_profile_duct_x160.csv  dual_conformal_profile_duct_x430.csv  dual_conformal_profile_duct_x_debug.rhai  dual_conformal_profile_duct_y0.csv  electronics_box_bracket_final_only.csv  electronics_box_bracket_final_only.rhai  electronics_box_bracket_final_only_xz.csv  electronics_box_bracket_final_only_yz.csv  electronics_box_bracket_xz_y0.csv  electronics_box_bracket_yz_x110.csv  electronics_box_bracket_yz_x132.csv  electronics_box_bracket_yz_x88.csv  electronics_box_component_xz_y15.csv  electronics_box_component_xz_y15_debug.csv  electronics_box_component_xz_y15_final.csv  electronics_box_component_xz_y15_noskin.csv  electronics_box_component_xz_y15_relief.csv  electronics_box_component_xz_y15_relief2.csv  electronics_box_component_xz_y15_relief3.csv  electronics_box_component_yz_x20.csv  electronics_box_demo.rhai  electronics_box_demo_density1.rhai  electronics_box_demo_density10.rhai  (+156 more)
aircraft_optimizer_platform/software/optimizer/: README.md  pyproject.toml  v0_1_skeleton_spec.md
aircraft_optimizer_platform/software/optimizer/configs/: cfd_faired_cap_vehicle_variants.v0_1.json  (+21 more)
shaders/: axes.wgsl  (+4 more)
(+393 files in other folders)
