[package]
name = "implicit-cad"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.29", features = ["wgpu"] }
rhai = "1.20"
glam = "0.29"
bytemuck = { version = "1.18", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "0.8", features = ["parse"] }
chrono = "0.4"
rfd = "0.15"
clap = { version = "4.5", features = ["derive"] }
lazy_static = "1.4"
rayon = "1.10"

[dev-dependencies]
tempfile = "3.8"
